# shumodav

./: .gitignore  README.md  log.txt  pyproject.toml  run.py
src/denoise_app/: main.py
src/denoise_app/core/: batch_processor.py  gpu_fft.py  image_processor.py  performance_profiler.py  wavelet_processor.py
src/denoise_app/ui/: main_window.py  widgets.py
src/denoise_app/utils/: image_utils.py  math_utils.py
